# xion-demo

./: Cargo.toml  README.md
artifacts/: checksums.txt
js-working/: index.js  package-lock.json  package.json  xion_contract.wasm
src/: contract.rs  error.rs  execute.rs  grant.rs  lib.rs  msg.rs  query.rs  state.rs
